2011-04-13  Ben Taylor  <bentaylor.solx86@gmail.com>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=57337

        Work around a bug in ternary opertions in the Solaris Studio
        12/12.1/12.2 compilers, using an if clause.

        * dom/NodeRenderStyle.h:
        (WebCore::Node::renderStyle):

Canonical link: https://commits.webkit.org/73493@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83736 268f45cc-cd09-0410-ab3c-d52691b4dbfc